--- a/demo/index.html
+++ b/demo/index.html
@@ -13,7 +13,7 @@ owl: http://www.w3.org/2002/07/owl#" class="no-js no-touch">
 </head>
 <body data-module="demo" data-google-analytics="UA-37798496-2">
 
-<h1>Redwall PHP Services</h1>
+<h1><a href="/">Redwall PHP Services</a></h1>
 
 <ul>
     <li><strong>Return example table as JSON:</strong> <a href="/api/?table=example">/api/?table=example</a></li>
