makes api for page hits

--- a/demo/index.html
+++ b/demo/index.html
@@ -16,12 +16,22 @@ owl: http://www.w3.org/2002/07/owl#" class="no-js no-touch">
 <h1><a href="/">Redwall PHP Services</a></h1>
 
 <ul>
-    <li><strong>Return example table as JSON:</strong> <a href="/api/?table=example">/api/?table=example</a></li>
+    <li><strong>Your URL is:</strong> <span data-js-variable="document_url"></span></li>
+    <li><strong>Your Request URI is:</strong> <span data-js-variable="request_uri"></span></li>
+    <li><strong>Return page_stas table as JSON:</strong> <a href="/api/page_stats/">/api/page_stats/</a></li>
+    <li><strong>Return example table as JSON:</strong> <a href="/api/example/">/api/example/</a></li>
 </ul>
 
 <div data-module="example_json">foo bar</div>
 
+
 <script data-main="/build/js/main" src="/build/js/require.js"></script>
+
+
+
+<script>
+</script>
+
 </body>
 </html>
 
